--- a/V1/index.html
+++ b/V1/index.html
@@ -10,6 +10,8 @@
         <header>
             <a href="about.html">About Us</a>
         </header>
+        <h1>The Select Screen</h1>
+        <img src="Title1.jpg" alt="" />
 
     </body>
 
