--- a/V1/index.html
+++ b/V1/index.html
@@ -11,7 +11,7 @@
             <a href="about.html">About Us</a>
         </header>
         <h1>The Select Screen</h1>
-        <img src="Title1.jpg" alt="" />
+        <img src="Title1.png" alt="" />
 
     </body>
 
