--- a/V1/about.html
+++ b/V1/about.html
@@ -8,7 +8,13 @@
     </head>
     <body>
         <header>
-            <a href="index.html">Home</a>
+            <nav>
+                <ul>
+                    <a href="index.html">Home</a>
+                    <li> <a href="about.html">TBA</a></li>
+                    <li> <a href="about.html">TBA</a></li>
+                </ul>
+            </nav>
         </header>
     </body>
 
