--- a/V1/index.html
+++ b/V1/index.html
@@ -8,10 +8,16 @@
     </head>
     <body>
         <header>
-            <a href="about.html">About Us</a>
+            <nav>
+                <ul>
+                    <li> <a href="about.html">About Us</a></li>
+                    <li> <a href="about.html">TBA</a></li>
+                    <li> <a href="about.html">TBA</a></li>
+                </ul>
+            </nav>
         </header>
-        <h1>The Select Screen</h1>
-        <img src="Title1.png" alt="" />
+        <img src="Title1.png" alt=" The Select Screen" />
+        
 
     </body>
 
