--- a/V1/about.html
+++ b/V1/about.html
@@ -10,9 +10,9 @@
         <header>
             <nav>
                 <ul>
-                    <a href="index.html">Home</a>
-                    <li> <a href="about.html">TBA</a></li>
-                    <li> <a href="about.html">TBA</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">TBA</a></li>
+                    <li><a href="about.html">TBA</a></li>
                 </ul>
             </nav>
         </header>
