--- a/V1/index.html
+++ b/V1/index.html
@@ -10,14 +10,30 @@
         <header>
             <nav>
                 <ul>
-                    <li> <a href="about.html">About Us</a></li>
-                    <li> <a href="about.html">TBA</a></li>
-                    <li> <a href="about.html">TBA</a></li>
+                    <!--M1LO7 Demonstrate the use of ordered lists-->
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="about.html">TBA</a></li>
+                    <li><a href="about.html">TBA</a></li>
                 </ul>
             </nav>
         </header>
         <img src="Title1.png" alt=" The Select Screen" />
-        
+        <h2>RPG (Role Playing Games)</h2>
+            <p>
+                Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
+            </p>
+        <h2>FPS (First Person Shooter)</h2>
+            <p>
+                First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
+            </p>
+        <h2>Fighting</h2>
+            <p>
+                Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
+            </p>
+        <h2>Simulation</h2>
+            <p>
+                Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
+            </p>
 
     </body>
 
