--- a/V1/index.html
+++ b/V1/index.html
@@ -11,7 +11,7 @@
         <header>
         <!--M1LO9 Demonstrate the use of inline images-->
         <h1>The Selection Screen</h1>
-        <img src="Title1.png" alt="The Select Screen" />
+        <img src="Title1.png" alt="" />
             <nav>
                 <ul>
                     <!--M1LO7 Demonstrate the use of ordered lists-->
