--- a/V1/index.html
+++ b/V1/index.html
@@ -16,8 +16,8 @@
                 <ul>
                     <!--M1LO7 Demonstrate the use of ordered lists-->
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="about.html">TBA</a></li>
-                    <li><a href="about.html">TBA</a></li>
+                    <li><a href="index.html">TBA</a></li>
+                    <li><a href="index.html">TBA</a></li>
                 </ul>
             </nav>
         </header>
