--- a/V1/about.html
+++ b/V1/about.html
@@ -8,12 +8,10 @@
     </head>
     <body>
         <header>
-        <!--M1LO9 Demonstrate the use of inline images-->
         <h1>About Us</h1>
         <img src="About1.png" alt="" />
             <nav>
                 <ul>
-                    <!--M1LO7 Demonstrate the use of ordered lists-->
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html">TBA</a></li>
                     <li><a href="index.html">TBA</a></li>
@@ -22,8 +20,13 @@
         </header>
 
         <h2>What to know</h2>
-            <p>This is a basic gaming recommendation site for people. While most people have their preferred genre or game of choice, some people are unsure on what they would like to play. Whether you want to try something from another genre or one from your current, you can have a mediocre recommendation here.</p>
-            <p>For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.</p>
+            <p>
+                This is a basic gaming recommendation site for people. While most people have their preferred genre or game of choice, some people are unsure on what they would like to play. Whether you want to try something from another genre or one from your current, you can have a mediocre recommendation here.
+            </p>
+            <p>
+                For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.
+            </p>
+    
     </body>
 
 </html>
