--- a/V1/index.html
+++ b/V1/index.html
@@ -15,6 +15,7 @@
             <nav>
                 <ul>
                     <!--M1LO7 Demonstrate the use of ordered lists-->
+                    <!--M1LO12 Create navigation using unordered lists-->
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="index.html">TBA</a></li>
                     <li><a href="index.html">TBA</a></li>
