--- a/V1/index.html
+++ b/V1/index.html
@@ -28,7 +28,7 @@
                 <p>
                     Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
                 </p>
-                
+
             </div>
         <h2>FPS (First Person Shooter)</h2>
             <div>
@@ -50,5 +50,8 @@
             </div>
 
     </body>
+    <footer>
+        Brought to you by the guy who never left his basement and only has a social life online.
+    </footer>
 
 </html>
