--- a/V1/about.html
+++ b/V1/about.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--
+            Name: Julian Smith
+            Date: May 02 2020
+            Assignment: M02: Project V1 - Basic HTML and CSS
+            The purpose of this assignment was to creat the first version of our websites.
+        -->
 
         <meta charset="utf-8" />
         <title>Easy Mode Explained</title>
