--- a/V1/index.html
+++ b/V1/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
+<!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page-->
 <html>
     <head>
+        <!--
+            Name: Julian Smith
+            Date: May 02 2020
+            Assignment: M02: Project V1 - Basic HTML and CSS
+            The purpose of this assignment was to creat the first version of our websites.
+        -->
 
         <meta charset="utf-8" />
         <title>Easy Mode</title>
