--- a/V1/about.html
+++ b/V1/about.html
@@ -32,9 +32,9 @@
             <p>
                 For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.
             </p>
-        <h2>About Me</h2>
+        <h2>What we added in V1:</h2>
             <p>
-                Ever since I was a little kid playing Pokémon Blue on my Gameboy Color, I have always loved playing videogames. As the years went by I played more and more games, but as I finished one adventure, I always wondered what I should play next. If you are like myself and very indecisive, you can look to some of the following web pages that can hopefully give you an idea.
+                
             </p>
     
     </body>
