--- a/V1/index.html
+++ b/V1/index.html
@@ -94,6 +94,11 @@
                 </ul>
             </nav>
             </article>
+        <h2>Genres</h2>
+        <a href="#RPG">Role Playing Game</a>
+        <a href="#FPS">First Person Shooter</a>
+        <a href="#FGT">Fighting</a>
+        <a href="#SIM">Simulation</a>
     </body>
     <footer>
         Brought to you by the guy who never left his basement and only has a social life online.
