--- a/V1/about.html
+++ b/V1/about.html
@@ -33,9 +33,18 @@
                 For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.
             </p>
         <h2>What we added in V1:</h2>
-            <p>
-                
-            </p>
+            <nav>
+                <ol>
+                    <li>Both Web pages</li>
+                    <li>The Style Sheet</li>
+                    <li>An image on both pages</li>
+                    <li>Sections for the genres</li>
+                    <li>The following genres: <a href="#RPG">Role Playing Game</a><a href="#FPS">First Person Shooter</a><a href="#FGT">Fighting</a><a href="#SIM">Simulation</a> </li>
+                    <li>Descriptions under the genres</li>
+                    <li>Games listed in each genre</li>
+                    <li>External links to those games</li>
+                </ol>
+            </nav>
     
     </body>
     <footer>
