--- a/V1/index.html
+++ b/V1/index.html
@@ -23,6 +23,7 @@
                 <ul>
                     <!--M1LO7 Demonstrate the use of ordered lists-->
                     <!--M1LO12 Create navigation using unordered lists-->
+                    <!--M1LO13 Demonstrate using 3 types of hyperlinks: site navigation-->
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="index.html">TBA</a></li>
                     <li><a href="index.html">TBA</a></li>
@@ -39,6 +40,7 @@
                 <nav>
                     <h3>Popular games in this genre</h3>
                     <ul>
+                        <!--M1LO13 Demonstrate using 3 types of hyperlinks: external-->
                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
                         <li><a href="https://thewitcher.com/en/witcher3">The Witcher 3</a></li>
                         <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
@@ -95,13 +97,14 @@
             </nav>
             </article>
         <h2>Genres</h2>
+        <!--M1LO13 Demonstrate using 3 types of hyperlinks: targeted location using ids-->
         <a href="#RPG">Role Playing Game</a>
         <a href="#FPS">First Person Shooter</a>
         <a href="#FGT">Fighting</a>
         <a href="#SIM">Simulation</a>
     </body>
     <footer>
-        Brought to you by the guy who never left his basement and only has a social life online.
+        Brought to you by the guy who never left his basement and only has a social life online. 
     </footer>
 
 </html>
