--- a/V1/index.html
+++ b/V1/index.html
@@ -96,6 +96,16 @@
                 </ul>
             </nav>
             </article>
+            <h2>Genres</h2>
+            <nav>
+            <!--M1LO13 Demonstrate using 3 types of hyperlinks: targeted location using ids-->
+                <ul>
+                    <li><a href="#RPG">Role Playing Game</a></li>
+                    <li><a href="#FPS">First Person Shooter</a></li>
+                    <li><a href="#FGT">Fighting</a></li>
+                    <li><a href="#SIM">Simulation</a></li>
+                </ul>
+            </nav>
 
     </body>
     <footer>
