--- a/V1/about.html
+++ b/V1/about.html
@@ -39,7 +39,7 @@
                     <li>The Style Sheet</li>
                     <li>An image on both pages</li>
                     <li>Sections for the genres</li>
-                    <li>The following genres: <a href="#RPG">Role Playing Game</a><a href="#FPS">First Person Shooter</a><a href="#FGT">Fighting</a><a href="#SIM">Simulation</a> </li>
+                    <li>The following genres: RPG, FPS, Fighting, and Simulation</li>
                     <li>Descriptions under the genres</li>
                     <li>Games listed in each genre</li>
                     <li>External links to those games</li>
