--- a/V1/about.html
+++ b/V1/about.html
@@ -48,6 +48,7 @@
     
     </body>
     <footer>
-        Brought to you by the guy who never left his basement and only has a social life online.
+        <!--M1LO10 Demonstrate the use of special characters from extended character sets-->
+        Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
     </footer>
 </html>
