--- a/V1/about.html
+++ b/V1/about.html
@@ -34,6 +34,7 @@
             </p>
         <h2>What we added in V1:</h2>
             <nav>
+                <!--M1LO7 Demonstrate the use of ordered lists-->
                 <ol>
                     <li>Both Web pages</li>
                     <li>The Style Sheet</li>
