--- a/V1/index.html
+++ b/V1/index.html
@@ -108,7 +108,7 @@
 
     </body>
     <footer>
-        Brought to you by the guy who never left his basement and only has a social life online. 
+        Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
     </footer>
 
 </html>
