--- a/V1/index.html
+++ b/V1/index.html
@@ -29,6 +29,10 @@
                 </ul>
             </nav>
         </header>
+        <h2>Overview</h2>
+        <p>
+            There are a vairety of videogames available to people. I have decided to put down some of the more Popular genres for people to pick a game to play. Listed are a few of the more popular genres today. There games listed are some of the highest rated games in their respective genre.
+        </p>
 
         <h2 id="RPG">RPG (Role Playing Games)</h2>
             <div>
