--- a/V1/about.html
+++ b/V1/about.html
@@ -15,7 +15,7 @@
     <body>
         <header>
         <h1>About Us</h1>
-        <img src="About1.png" alt="" />
+        <img src="About1.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
