--- a/V1/index.html
+++ b/V1/index.html
@@ -18,7 +18,7 @@
         <header>
         <!--M1LO9 Demonstrate the use of inline images-->
         <h1>The Selection Screen</h1>
-        <img src="Title1.png" alt="" />
+        <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
             <nav>
                 <ul>
                     <!--M1LO12 Create navigation using unordered lists-->
