--- a/V1/index.html
+++ b/V1/index.html
@@ -40,8 +40,9 @@ lang="en-us"
                 <p>
                     Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
                 </p>
-                <nav>
+                <article>
                     <h3>Popular games in this genre</h3>
+                <nav>
                     <ul>
                         <!--M1LO13 Demonstrate using 3 types of hyperlinks: external-->
                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
@@ -49,20 +50,23 @@ lang="en-us"
                         <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
                     </ul>
                 </nav>
+                </article>
             </div>
         <h2 id="FPS">FPS (First Person Shooter)</h2>
             <div>
                 <p>
                     First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
                 </p>
-                <nav>
+                <article>
                     <h3>Popular games in this genre</h3>
+                <nav>
                     <ul>
                         <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
                         <li><a href="https://thewitcher.com/en/witcher3">Apex Legends</a></li>
                         <li><a href="https://www.callofduty.com/warzone">Call of Duty: Warzone</a></li>
                     </ul>
                 </nav>
+                </article>
             </div>
         <h2 id="FGT">Fighting</h2>
             <div>
@@ -70,28 +74,32 @@ lang="en-us"
                     Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
                 </p>
             </div>
-            <nav>
+            <article>
                 <h3>Popular games in this genre</h3>
+            <nav>
                 <ul>
                     <li><a href="https://www.mortalkombat.com/">Mortal Kombat 11</a></li>
                     <li><a href="https://www.bandainamcoent.com/games/soulcalibur-vi">Soul Calibur VI</a></li>
                     <li><a href="https://www.smashbros.com/en_US/">Super Smash Bros Ultimate</a></li>
                 </ul>
             </nav>
+            </article>
         <h2 id="SIM">Simulation</h2>
             <div>
                 <p>
                     Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
                 </p>
             </div>
-            <nav>
+            <article>
                 <h3>Popular games in this genre</h3>
+            <nav>
                 <ul>
                     <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
                     <li><a href="https://www.ea.com/games/the-sims/the-sims-4/packs/stuff-packs/the-sims-4-tiny-living">The Sims 4</a></li>
                     <li><a href="https://animal-crossing.com/new-horizons/?cid=N1043-01:ch=pdpd&sid=1115">Animal Crossing New Horizon</a></li>
                 </ul>
             </nav>
+            </article>
             <h2>Genres</h2>
             <nav>
             <!--M1LO13 Demonstrate using 3 types of hyperlinks: targeted location using ids-->
@@ -102,9 +110,10 @@ lang="en-us"
                     <li><a href="#SIM">Simulation</a></li>
                 </ul>
             </nav>
-        <footer>
-                Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
-        </footer>
+
     </body>
+    <footer>
+        Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
+    </footer>
 
 </html>
