--- a/V1/about.html
+++ b/V1/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <!--
             Name: Julian Smith
@@ -46,10 +46,11 @@
                     <li>External links to those games</li>
                 </ol>
             </nav>
-    
+        <footer>
+            <!--M1LO10 Demonstrate the use of special characters from extended character sets-->
+            <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
+            
+        </footer>
     </body>
-    <footer>
-        <!--M1LO10 Demonstrate the use of special characters from extended character sets-->
-        Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
-    </footer>
+
 </html>
