--- a/V1/index.html
+++ b/V1/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html lang="en-us">
+<!DOCTYPE html>
 <!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page-->
-<html>
+<html lang="en">
     <head>
         <!--
             Name: Julian Smith
@@ -39,9 +39,8 @@
                 <p>
                     Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
                 </p>
-                <article>
+                <article><h3>Popular games in this genre</h3>
                 <nav>
-                    <h3>Popular games in this genre</h3>
                     <ul>
                         <!--M1LO13 Demonstrate using 3 types of hyperlinks: external-->
                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
@@ -109,10 +108,9 @@
                     <li><a href="#SIM">Simulation</a></li>
                 </ul>
             </nav>
-
+        <footer>
+            <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
+        </footer>
     </body>
-    <footer>
-        Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.
-    </footer>
 
 </html>
