--- a/V1/index.html
+++ b/V1/index.html
@@ -55,9 +55,8 @@
                 <p>
                     First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
                 </p>
-                <article>
+                <article><h3>Popular games in this genre</h3>
                 <nav>
-                    <h3>Popular games in this genre</h3>
                     <ul>
                         <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
                         <li><a href="https://thewitcher.com/en/witcher3">Apex Legends</a></li>
@@ -72,9 +71,8 @@
                     Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
                 </p>
             </div>
-            <article>
+            <article><h3>Popular games in this genre</h3>
             <nav>
-                <h3>Popular games in this genre</h3>
                 <ul>
                     <li><a href="https://www.mortalkombat.com/">Mortal Kombat 11</a></li>
                     <li><a href="https://www.bandainamcoent.com/games/soulcalibur-vi">Soul Calibur VI</a></li>
@@ -88,9 +86,8 @@
                     Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
                 </p>
             </div>
-            <article>
+            <article><h3>Popular games in this genre</h3>
             <nav>
-                <h3>Popular games in this genre</h3>
                 <ul>
                     <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
                     <li><a href="https://www.ea.com/games/the-sims/the-sims-4/packs/stuff-packs/the-sims-4-tiny-living">The Sims 4</a></li>
