--- a/V1/index.html
+++ b/V1/index.html
@@ -98,6 +98,7 @@
             <h2>Genres</h2>
             <nav>
             <!--M1LO13 Demonstrate using 3 types of hyperlinks: targeted location using ids-->
+            <!--M2LO7 Demonstrate a CSS attribute selector other than class or id -->
                 <ul>
                     <li><a href="#RPG">Role Playing Game</a></li>
                     <li><a href="#FPS">First Person Shooter</a></li>
