--- a/V2/about.html
+++ b/V2/about.html
@@ -15,14 +15,14 @@
     <body>
         <header>
         <h1>About Us</h1>
-        <img src="About1.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">TBA</a></li>
+                    <li><a href="myfav.html">My Favorites</a></li>
                     <li><a href="index.html">TBA</a></li>
                 </ul>
             </nav>
+            <img src="About1.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
         </header>
 
         <h2>What to know</h2>
@@ -34,7 +34,6 @@
             </p>
         <h2>What we added in V1:</h2>
             <nav>
-                <!--M1LO7 Demonstrate the use of ordered lists-->
                 <ol>
                     <li>Both Web pages</li>
                     <li>The Style Sheet</li>
@@ -47,7 +46,6 @@
                 </ol>
             </nav>
         <footer>
-            <!--M1LO10 Demonstrate the use of special characters from extended character sets-->
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
             
         </footer>
