--- a/V2/index.html
+++ b/V2/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page-->
 <html lang="en">
     <head>
         <!--
@@ -11,23 +10,19 @@
 
         <meta charset="utf-8" />
         <title>Easy Mode</title>
-        <!--M1LO8 Demonstrate the use of external style sheets-->
         <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
         <header>
-        <!--M1LO9 Demonstrate the use of inline images-->
         <h1>The Selection Screen</h1>
-        <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
             <nav>
                 <ul>
-                    <!--M1LO12 Create navigation using unordered lists-->
-                    <!--M1LO13 Demonstrate using 3 types of hyperlinks: site navigation-->
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="index.html">TBA</a></li>
+                    <li><a href="myfav.html">My Favorites</a></li>
                     <li><a href="index.html">TBA</a></li>
                 </ul>
             </nav>
+        <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
         </header>
         <h2>Overview</h2>
         <p>
@@ -42,7 +37,6 @@
                 <article><h3>Popular games in this genre</h3>
                 <nav>
                     <ul>
-                        <!--M1LO13 Demonstrate using 3 types of hyperlinks: external-->
                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
                         <li><a href="https://thewitcher.com/en/witcher3">The Witcher 3</a></li>
                         <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
@@ -97,8 +91,6 @@
             </article>
             <h2>Genres</h2>
             <nav>
-            <!--M1LO13 Demonstrate using 3 types of hyperlinks: targeted location using ids-->
-            <!--M2LO7 Demonstrate a CSS attribute selector other than class or id -->
                 <ul>
                     <li><a href="#RPG">Role Playing Game</a></li>
                     <li><a href="#FPS">First Person Shooter</a></li>
