--- a/V2/about.html
+++ b/V2/about.html
@@ -20,6 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="myfav.html">My Favorites</a></li>
                     <li><a href="index.html">TBA</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
             <img src="About1.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
