--- a/V2/index.html
+++ b/V2/index.html
@@ -17,12 +17,13 @@
         <h1>The Selection Screen</h1>
             <nav>
                 <ul>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="myfav.html">My Favorites</a></li>
                     <li><a href="index.html">TBA</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-        <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
+        <img src="image2.jpg" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
         </header>
         <h2>Overview</h2>
         <p>
