--- a/V2/about.html
+++ b/V2/about.html
@@ -23,7 +23,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-            <img src="About1.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
+            <img src="Title2.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
         </header>
 
         <h2>What to know</h2>
