--- a/V2/index.html
+++ b/V2/index.html
@@ -23,73 +23,97 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-        <img src="image2.jpg" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
+        <img src="image2.jpg" alt="" /><!--This image is a Screenshot from my Nintendo Switch-->
         </header>
-        <h2>Overview</h2>
-        <p>
-            There are a vairety of videogames available to people. I have decided to put down some of the more Popular genres for people to pick a game to play. Listed are a few of the more popular genres today. There games listed are some of the highest rated games in their respective genre.
-        </p>
 
-        <h2 id="RPG">RPG (Role Playing Games)</h2>
-            <div>
-                <p>
-                    Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
-                </p>
-                <article><h3>Popular games in this genre</h3>
-                <nav>
-                    <ul>
-                        <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
-                        <li><a href="https://thewitcher.com/en/witcher3">The Witcher 3</a></li>
-                        <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
-                    </ul>
-                </nav>
-                </article>
+        <div class="row">
+            <h2>Overview</h2>
+            <p>
+                There are a vairety of videogames available to people. I have decided to put down some of the more Popular genres for people to pick a game to play. Listed are a few of the more popular genres today. There games listed are some of the highest rated games in their respective genre.
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="col-2-3"></div>
+
+                <div class="row">
+                    <div class="col-1-2">
+                        <article>
+                            <h2 id="RPG">RPG (Role Playing Games)</h2>
+                                <p>
+                                    Role playing games put the player on an adventure through a new world. RPG’s tend to guide the player through a story, often hitting other genres like action, fantasy and sci-fi. Embark on a grand scale adventure and progress through the story of an adventurer in another world.
+                                </p>
+                            <h3>Popular games in this genre</h3>
+                                <nav>
+                                    <ul>
+                                        <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
+                                        <li><a href="https://thewitcher.com/en/witcher3">The Witcher 3</a></li>
+                                        <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
+                                    </ul>
+                                </nav>
+                        </article>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-2">
+                        <article>
+                            <h2 id="FPS">FPS (First Person Shooter)</h2>
+                                <p>
+                                    First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
+                                </p>
+                            <h3>Popular games in this genre</h3>
+                                <nav>
+                                    <ul>
+                                        <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
+                                        <li><a href="https://thewitcher.com/en/witcher3">Apex Legends</a></li>
+                                        <li><a href="https://www.callofduty.com/warzone">Call of Duty: Warzone</a></li>
+                                    </ul>
+                                </nav>
+                        </article>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-2">
+                        <article>
+                            <h2 id="FGT">Fighting</h2>
+                                <p>
+                                    Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
+                                </p>
+                            <h3>Popular games in this genre</h3>
+                                <nav>
+                                    <ul>
+                                        <li><a href="https://www.mortalkombat.com/">Mortal Kombat 11</a></li>
+                                        <li><a href="https://www.bandainamcoent.com/games/soulcalibur-vi">Soul Calibur VI</a></li>
+                                        <li><a href="https://www.smashbros.com/en_US/">Super Smash Bros Ultimate</a></li>
+                                    </ul>
+                                </nav>
+                        </article>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-2">
+                        <article>
+                            <h2 id="SIM">Simulation</h2>
+                                <p>
+                                    Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
+                                </p>
+                            <h3>Popular games in this genre</h3>
+                                <nav>
+                                    <ul>
+                                        <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
+                                        <li><a href="https://www.ea.com/games/the-sims/the-sims-4/packs/stuff-packs/the-sims-4-tiny-living">The Sims 4</a></li>
+                                        <li><a href="https://animal-crossing.com/new-horizons/?cid=N1043-01:ch=pdpd&sid=1115">Animal Crossing New Horizon</a></li>
+                                    </ul>
+                                </nav>
+                        </article>
+                    </div>
+                </div>
             </div>
-        <h2 id="FPS">FPS (First Person Shooter)</h2>
-            <div>
-                <p>
-                    First person shooters put the player in a first-person point of view, where the player must use a variety of firearms to progress through a scenario or battlefield. Go at it by yourself or with a team, manage your ammo, environment and reaction speed to come out victorious.
-                </p>
-                <article><h3>Popular games in this genre</h3>
-                <nav>
-                    <ul>
-                        <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
-                        <li><a href="https://thewitcher.com/en/witcher3">Apex Legends</a></li>
-                        <li><a href="https://www.callofduty.com/warzone">Call of Duty: Warzone</a></li>
-                    </ul>
-                </nav>
-                </article>
-            </div>
-        <h2 id="FGT">Fighting</h2>
-            <div>
-                <p>
-                    Fighting games place the player in an (often) one on one fight with another player or AI. The fast pace and often strategical fighting and combo mechanics often lead to quick but exciting matches. Compete in tournaments or against others for honor, glory, and bragging rights.
-                </p>
-            </div>
-            <article><h3>Popular games in this genre</h3>
-            <nav>
-                <ul>
-                    <li><a href="https://www.mortalkombat.com/">Mortal Kombat 11</a></li>
-                    <li><a href="https://www.bandainamcoent.com/games/soulcalibur-vi">Soul Calibur VI</a></li>
-                    <li><a href="https://www.smashbros.com/en_US/">Super Smash Bros Ultimate</a></li>
-                </ul>
-            </nav>
-            </article>
-        <h2 id="SIM">Simulation</h2>
-            <div>
-                <p>
-                    Simulation games tone down the rush of other games and place you in an experience that you can enjoy at your own pace. Often these games involve farming, flying, and other real-world activities. Often these games can provide hours of fun that can be picked back up at any time.
-                </p>
-            </div>
-            <article><h3>Popular games in this genre</h3>
-            <nav>
-                <ul>
-                    <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
-                    <li><a href="https://www.ea.com/games/the-sims/the-sims-4/packs/stuff-packs/the-sims-4-tiny-living">The Sims 4</a></li>
-                    <li><a href="https://animal-crossing.com/new-horizons/?cid=N1043-01:ch=pdpd&sid=1115">Animal Crossing New Horizon</a></li>
-                </ul>
-            </nav>
-            </article>
+        </div>
+    </body>
             <h2>Genres</h2>
             <nav>
                 <ul>
@@ -99,6 +123,7 @@
                     <li><a href="#SIM">Simulation</a></li>
                 </ul>
             </nav>
+
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
         </footer>
