--- a/V2/myfav.html
+++ b/V2/myfav.html
@@ -25,4 +25,8 @@
             </nav>
         <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
         </header>
+        
+        <footer>
+            <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
+        </footer>
     </body>
