--- a/V2/about.html
+++ b/V2/about.html
@@ -3,7 +3,7 @@
     <head>
         <!--
             Name: Julian Smith
-            Date: May 02 2020
+            Date: May 16 2020
             Assignment: M02: Project V1 - Basic HTML and CSS
             The purpose of this assignment was to creat the first version of our websites.
         -->
@@ -23,7 +23,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-            <img src="Title2.png" alt="" /><!--This image was pulled from https://gamebanana.com/sprays/52947-->
+            <img src="Title2.png" alt="" /><!--This image is a Screenshot from my Nintendo Switch-->
         </header>
 
         <h2>What to know</h2>
@@ -36,7 +36,7 @@
         <h2>What we added in V1:</h2>
             <nav>
                 <ol>
-                    <li>Both Web pages</li>
+                    <li>The My Favorites Web pages</li>
                     <li>The Style Sheet</li>
                     <li>An image on both pages</li>
                     <li>Sections for the genres</li>
