--- a/V2/index.html
+++ b/V2/index.html
@@ -3,7 +3,7 @@
     <head>
         <!--
             Name: Julian Smith
-            Date: May 02 2020
+            Date: May 16 2020
             Assignment: M02: Project V1 - Basic HTML and CSS
             The purpose of this assignment was to creat the first version of our websites.
         -->
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-        <h1>The Selection Screen</h1>
+        <h1>The Select Screen</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -53,9 +53,6 @@
                                 </nav>
                         </article>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col-1-2">
                         <article>
                             <h2 id="FPS">FPS (First Person Shooter)</h2>
@@ -91,9 +88,7 @@
                                 </nav>
                         </article>
                     </div>
-                </div>
 
-                <div class="row">
                     <div class="col-1-2">
                         <article>
                             <h2 id="SIM">Simulation</h2>
@@ -114,15 +109,6 @@
             </div>
         </div>
     </body>
-            <h2>Genres</h2>
-            <nav>
-                <ul>
-                    <li><a href="#RPG">Role Playing Game</a></li>
-                    <li><a href="#FPS">First Person Shooter</a></li>
-                    <li><a href="#FGT">Fighting</a></li>
-                    <li><a href="#SIM">Simulation</a></li>
-                </ul>
-            </nav>
 
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
