--- a/V2/myfav.html
+++ b/V2/myfav.html
@@ -3,7 +3,7 @@
     <head>
         <!--
             Name: Julian Smith
-            Date: May 02 2020
+            Date: May 16 2020
             Assignment: M02: Project V1 - Basic HTML and CSS
             The purpose of this assignment was to creat the first version of our websites.
         -->
@@ -23,9 +23,30 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
-        <img src="Title1.png" alt="" /><!--This image was pulled from https://www.cgmagonline.com/2017/02/10/from-android-nim-to-portal-the-evolution-of-puzzle-games/-->
+        <img src="Title3.jpg" alt="" /><!--This image was pulled from https://www.nintendoenthusiast.com/ocarina-of-time-still-only-metacritic-99-score/-->
         </header>
-        
+        <h2>My Top Three</h2>
+        <p>
+            I have always enjoyed gaming, and I have played hundreds throughout the years. As you might be able to guess, I have found games that I do love. Here are my top three games:
+        </p>
+        <div class="row">
+            <div class="col-2-3"></div>
+                <div class="row">
+                    <div class="col-1-3">
+                        <img src="fav1.jpg" alt="" /><!--This image was pulled from http://www.gokuss7.com/blog/nintendo-n64-classic-mini/the-legend-of-zelda-ocarina-of-time/-->
+
+                    </div>
+                    
+                    <div class="col-1-3">
+                        <img src="fav2.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Super-Smash-Bros-Ultimate-Nintendo/dp/B07DMFRNF9-->
+                    </div>
+
+                    <div class="col-1-3">
+                        <img src="fav3.jpg" alt="" /><!--This image was pulled from https://www.amazon.com/Last-Us-PlayStation-3-sony-playstation3/dp/B007CM0K86-->
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
         </footer>
