--- a/V2/about.html
+++ b/V2/about.html
@@ -33,17 +33,16 @@
             <p>
                 For those who do not play games, just got into games or just want to browse, you can look around and you might find something that piques your interest. This site is currently under construction and being updated every week…ish. So come back every now and again and who know what you might find.
             </p>
-        <h2>What we added in V1:</h2>
+        <h2>What we added in V2:</h2>
             <nav>
                 <ol>
-                    <li>The My Favorites Web pages</li>
-                    <li>The Style Sheet</li>
-                    <li>An image on both pages</li>
-                    <li>Sections for the genres</li>
-                    <li>The following genres: RPG, FPS, Fighting, and Simulation</li>
-                    <li>Descriptions under the genres</li>
-                    <li>Games listed in each genre</li>
-                    <li>External links to those games</li>
+                    <li>The My Favorites Web pages has been added</li>
+                    <li>The Style Sheet has been updated</li>
+                    <li>The images on the pages have been changed and ajusted</li>
+                    <li>The genres have set up in a grid</li>
+                    <li>The dots in the listed items have been removed</li>
+                    <li>The navigational section at the top has been lined up horizontally</li>
+                    <li>Pictures have been added under the My Favorites</li>
                 </ol>
             </nav>
         <footer>
