--- a/V2/myfav.html
+++ b/V2/myfav.html
@@ -23,6 +23,7 @@
                     <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
+        <!--M3LO9 Demonstrate fixed, static, or inherited positioning (ingereted image position-->
         <img src="Title3.jpg" alt="" /><!--This image was pulled from https://www.nintendoenthusiast.com/ocarina-of-time-still-only-metacritic-99-score/-->
         </header>
         <h2>My Top Three</h2>
