--- a/V2/index.html
+++ b/V2/index.html
@@ -35,6 +35,9 @@
 
         <div class="row">
             <div class="col-2-3"></div>
+            <!--M3LO2 Demonstrate floating elements
+                M3LO3 Demonstrate a clearing floats 
+                M3LO6 Demonstrate formatting a grid-->
 
                 <div class="row">
                     <div class="col-1-2">
@@ -49,6 +52,8 @@
                                         <li><a href="https://ffvii-remake.square-enix-games.com/en-us">Final Fantasy VII Remake</a></li>
                                         <li><a href="https://thewitcher.com/en/witcher3">The Witcher 3</a></li>
                                         <li><a href="https://www.zelda.com/breath-of-the-wild/">The Legend of Zelda: Breathe of the Wild</a></li>
+                                        <li><a href="https://swordshield.pokemon.com/en-us/">Pokemon Sword / Pokemon Shield</a></li>
+                                        <li><a href="https://atlus.com/p5r/lang/en/">Persona 5 Royale</a></li>
                                     </ul>
                                 </nav>
                         </article>
@@ -65,6 +70,8 @@
                                         <li><a href="https://bethesda.net/en/game/doom">Doom: Eternal</a></li>
                                         <li><a href="https://thewitcher.com/en/witcher3">Apex Legends</a></li>
                                         <li><a href="https://www.callofduty.com/warzone">Call of Duty: Warzone</a></li>
+                                        <li><a href="https://playoverwatch.com/en-us/">Overwatch</a></li>
+                                        <li><a href="https://www.pubg.com/en-us/">PUBG</a></li>
                                     </ul>
                                 </nav>
                         </article>
@@ -84,6 +91,8 @@
                                         <li><a href="https://www.mortalkombat.com/">Mortal Kombat 11</a></li>
                                         <li><a href="https://www.bandainamcoent.com/games/soulcalibur-vi">Soul Calibur VI</a></li>
                                         <li><a href="https://www.smashbros.com/en_US/">Super Smash Bros Ultimate</a></li>
+                                        <li><a href="http://skullgirls.com/">Skull Girls</a></li>
+                                        <li><a href="https://www.bandainamcoent.com/games/dragon-ball-fighterz">Dragon Ball FighterZ</a></li>
                                     </ul>
                                 </nav>
                         </article>
@@ -101,6 +110,7 @@
                                         <li><a href="https://www.kerbalspaceprogram.com/">Kerbal Space Program</a></li>
                                         <li><a href="https://www.ea.com/games/the-sims/the-sims-4/packs/stuff-packs/the-sims-4-tiny-living">The Sims 4</a></li>
                                         <li><a href="https://animal-crossing.com/new-horizons/?cid=N1043-01:ch=pdpd&sid=1115">Animal Crossing New Horizon</a></li>
+                                        
                                     </ul>
                                 </nav>
                         </article>
