--- a/V2/myfav.html
+++ b/V2/myfav.html
@@ -52,3 +52,4 @@
             <p>Brought to you by the guy who never left his basement and only has a social life online. &#8226; Reccomendations from the other guy who never left the attic.</p>
         </footer>
     </body>
+</html>
